--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "material-table": "^1.57.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-excel-renderer": "^1.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "serve": "^11.3.0"
